# codemcp-windows

./: .gitignore  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  install.sh
.github/workflows/: release.yml
pyworker/: bootstrap.py
pyworker/tests/: test_concurrency.py  test_validation.py
src/: admin.rs  cli.rs  config.rs  control.rs  env.rs  error.rs  main.rs  prompt.rs  runtime.rs  server.rs  setup.rs  update.rs
src/auth/: callback.rs  login.rs
src/exec/: docker.rs  host.rs  mod.rs
src/sdk/: mod.rs
src/upstream/: client.rs  mod.rs
